--- a/index.html
+++ b/index.html
@@ -5,29 +5,109 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Profile</title>
 </head>
 
 <body>
-    <div class="main">
+    <!-- Header section Start -->
+    <header>
+        <div class="backmenu">
 
-        <div class="profilepic">
-            <img src="tasin.jpg" alt="Tasin" width="500" height="800">
+            <div class="mylogo wrapper">
+
+                <a href="#">
+                    <img src="/Image/Personal logo.jpg " alt="">
+                </a>
+            </div>
+
+            <nav>
+
+                <ul>
+
+                    <li><a href="#">Home </a></li>
+                    <li><a href="#">About </a></li>
+                    <li><a href="#">Blog </a></li>
+                    <li><a href="#">My work </a></li>
+
+                </ul>
+
+                <button>Contact Us</button>
+
+            </nav>
+
         </div>
-        <div class="details">
 
-            <div class="name">Isfafuzzaman Tasin</div>
-            <div class="job">Mern Stack Developer</div>
+
+
+
+    </header>
+    <!-- Header section End -->
+
+    <section class="Information">
+
+        <div class="wrapper">
+            <div class="column">
+                <div class="myinfor"></div>
+                <h1>MERN STACK Developer</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing .</p>
+                <button class="cv"> <a href="">Download CV</a></button>
+                
+            </div>
+
+
+            <div class="column">
+                <div class="myimage">
+                    <img src="/Image/tasin.jpg" width="500px" alt="zaman">
+                </div>
+            </div>
         </div>
-        <div class="aboutme">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium error reprehenderit rerum, deleniti reiciendis iste laborum esse voluptate alias dolorum commodi blanditiis, consequatur repudiandae. Quidem molestias et tenetur iusto dolores.</div>
 
 
 
-    </div>
+    </section>
+    <!-- Information section end -->
+
+    <!-- Blog section start -->
+
+
+    <section class="blog1">
+
+        <div class="wrapper">
+
+            <div class="col">
+                <div class="blog2">
+                    <img src="/Image/1.png" alt="">
+                    <h3>Start gaming today!</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero praesentium voluptate
+                        dignissimos eum, odio laboriosam cumque optio temporibus mollitia qui.</p>
+                        <button>Find more</button>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="blog2">
+                    <img src="/Image/2.jpeg" alt="">
+                    <h3>Start gaming today!</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero praesentium voluptate
+                        dignissimos eum, odio laboriosam cumque optio temporibus mollitia qui.</p>
+                        <button>Find more</button>
+                </div>
+            </div>
+            <div class="col">
+                <div class="blog2">
+                    <img src="/Image/3.png" alt="">
+                    <h3>Start gaming today!</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero praesentium voluptate
+                        dignissimos eum, odio laboriosam cumque optio temporibus mollitia qui.</p>
+                        <button>Find more</button>
+                </div>
+            </div>
+
+        </div>
+
+
+    </section>
 </body>
 
 </html>
